# rust_debian

./: Cargo.toml  README.md
src/: rust_practice.desktop  test.rs
